python.core/a13.show.use.drop dbs.txt

Enterprise test> db
test
Enterprise test> show dbs
admin    40.00 KiB
config  100.00 KiB
local    40.00 KiB
Enterprise test> usedbcmr
ReferenceError: usedbcmr is not defined
Enterprise test> use dbcmr
switched to db dbcmr
Enterprise dbcmr> db
dbcmr
Enterprise dbcmr> show dbs
admin    40.00 KiB
config  100.00 KiB
local    40.00 KiB
Enterprise dbcmr> db dropDatabase()
Uncaught:
SyntaxError: Missing semicolon. (1:2)

> 1 | db dropDatabase()
    |   ^
  2 |

Enterprise dbcmr> db.dropDatabase()
{ ok: 1, dropped: 'dbcmr' }
Enterprise dbcmr> show dbs
admin    40.00 KiB
config  100.00 KiB
local    40.00 KiB
Enterprise dbcmr> use local
switched to db local
Enterprise local> show dbs
admin    40.00 KiB
config  100.00 KiB
local    40.00 KiB